<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundChat"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:theme="@style/SignIn">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/with"
        android:textAllCaps="true"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/facebookSignIn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/googleSignIn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_google" />

        <ImageView
            android:id="@+id/twitterSignIn"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_twitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_et_upper"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            app:srcCompat="@drawable/ic_email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_et"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/signInText"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/background_et_lower"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            app:srcCompat="@drawable/ic_password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_et"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/signInText"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_btn_create"
        android:onClick="onClick"
        android:padding="6dp"
        android:text="@string/forgotPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_btn_login"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="@color/loginText" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_btn_create"
        android:onClick="onClick"
        android:text="@string/signUp" />

</LinearLayout>